Fixing overlap

--- a/assets/styles/homepage.css
+++ b/assets/styles/homepage.css
@@ -10,7 +10,7 @@ body {
 }
 
 body.with-header {
-	padding-top: 120px;
+	padding-top: 20px;
 }
 
 .logo {
